# cs2511-docker

./: .gitignore  .gitmodules  README.md
.github/archive-workflows/: cs2511-gradle-8.5.yml  cs2511-gradle-8.8-ass1.yml  cs2511-gradle-8.8-ass2.yml  cs2511-gradle.yml  cs2511-playwright-1.41.2-24.12.0.yml  cs2511-playwright-1.57.0-24.12.0.yml  cs2511-playwright-1.57.0-24.14.1.yml  cs2511-playwright-1.58.2-24.14.0.yml
.github/workflows/: cs2511-admin.yml  cs2511-automarking.yml  cs2511-gradle-8.5.yml  cs2511-gradle-8.8-ass1.yml  cs2511-gradle-8.8-ass2.yml  cs2511-gradle-8.8.yml  cs2511-gradle-8.yml  cs2511-gradle-9.2-ass1-cache.yml  cs2511-gradle-9.2-ass1.yml  cs2511-gradle-9.2-ass2.yml  cs2511-gradle-9.2.yml  cs2511-gradle.yml  cs2511-playwright-1.60.0-24.16.0.yml
cs2511-admin/: Dockerfile  pyproject.toml
cs2511-automarking/: Dockerfile
cs2511-gradle/: Dockerfile
cs2511-gradle-8/: Dockerfile
cs2511-gradle-8.5/: Dockerfile
cs2511-gradle-8.8/: Dockerfile
cs2511-gradle-8.8-ass1/: Dockerfile
cs2511-gradle-8.8-ass2/: Dockerfile
cs2511-gradle-9.2/: Dockerfile
cs2511-gradle-9.2-ass1/: Dockerfile
cs2511-gradle-9.2-ass1-cache/: .dockerignore  Dockerfile
cs2511-gradle-9.2-ass1-cache/seed/: seed-init.gradle  settings.gradle
cs2511-gradle-9.2-ass1-cache/seed/app/: build.gradle
cs2511-gradle-9.2-ass2/: Dockerfile
cs2511-playwright-1.41.2-24.12.0/: Dockerfile
cs2511-playwright-1.57.0-24.12.0/: Dockerfile
cs2511-playwright-1.57.0-24.14.1/: Dockerfile
cs2511-playwright-1.58.2-24.14.0/: Dockerfile
cs2511-playwright-1.60.0-24.16.0/: Dockerfile
(+2 files in other folders)
