[tool.poetry]
name = "cs2511-admin"
version = "0.1.0"
description = ""
authors = ["Alvin Cherk <a.cherk@unsw.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gspread = "3.6.0"
requests = "^2.31.0"
python-gitlab = "2.4.0"


[tool.poetry.group.dev.dependencies]
coverage = "5.4"
virtualenv = "^20.24.4"
requests-oauthlib = "1.3.1"
pylint = "2.6.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
